--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,14 @@
     <string name="email_address">Format: *****@****.***</string>
     <string name="password_valid">Enter Valid Password</string>
     <string name="login">Login</string>
-    <string name="create_account">Create an Account?</string>
+    <string name="create_account">Create an Account</string>
     <string name="First_Name">First Name</string>
     <string name="Last_Name">Last Name</string>
     <string name="SignUp">Sign Up</string>
     <string name="CreateAccount">Create an Account</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="sign_out">SIGN OUT</string>
+    <string name="reset_email">Send to your Email address</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_sign_up">SignUpActivity</string>
 </resources>
