--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_home">Home</string>
     <string name="title_my_recipe">My Recipe</string>
     <string name="title_profile">Profile</string>
+    <integer name="img_corner">10</integer>
 </resources>
